public/stylesheets/application.css
/* ... */
div#filter a#cultural_selector{width: 74px; background-image: url("/images/explore/right_filter.png")}
div#filter a.selected#all_selector, a.selected#natural_selector, a.selected#cultural_selector {color: #4C2401; text-shadow: #FFD8B4 0px 1px; background-position: 0 0px}

div#filter div#criteria {float: left; margin: 0 10px 0 15px; }
div#filter div#criteria span {float: left; width: 212px; height: 24px; ; background: url("/images/explore/criteria_select.png") no-repeat -2px 0;}
div#filter div#criteria span a{display: block; width: 212px; height: 24px; padding: 5px 0 0 10px; color: #333333; font: normal 13px "PT Sans Bold"; text-decoration: none;}
div#filter div#criteria ul{position: absolute; display: none; top: 36px; width: 215px; height: 264px; padding: 4px 0 0 0; z-index: 5; background: url("/images/explore/criteria_select.png") no-repeat -2px -47px;}
div#filter div#criteria ul li{padding: 4px 10px 4px 10px; font: normal 13px "Arial";}
div#filter div#criteria ul li a{text-decoration: none; color: #333333;}
div#filter div#criteria ul li a:hover{color: #FF9900;}

div#filter a#mosaic_selector, a#list_selector{float: left; width: 45px; height: 19px; padding: 5px 0 0 0; text-align: center; font: normal 13px "PT Sans"; text-decoration: none; color: #000000; color: #333333; background-position: 0 24px; font: normal 13px "PT Sans Bold"; text-shadow: #FFFFFF }
div#filter a#mosaic_selector{margin: 0 0 0 0px; background-image: url("/images/explore/mosaic_filter.png")}
div#filter a#list_selector{background-image: url("/images/explore/list_filter.png")}
div#filter a.selected#mosaic_selector, a.selected#list_selector{background-position: 0 0;}


/* Mosaico */
div#explore div.middle div#mosaic {position: relative;}
div#explore div.middle div#mosaic {margin: 0 8px 0 8px; background: #FFFFFF;}
div#explore div.middle div#mosaic ul#image_list {height: 645px;}
div.clear {clear: both;}

/* FEATURES SPECIFIC -------------------------------------------- */

div#feature_image {margin: 0 8px -4px 8px; position: relative;}
div#feature_image ul.image_selector {position: absolute; top: 20px; left: -15px; padding:10px 5px 10px 10px; background-color: #000000;}
div#feature_image ul.image_selector li {float: left; padding: 0 5px 0 0;}
div#feature_image ul.image_selector li a {float: left; width: 8px; height: 8px; background: url("/images/image_selector.png") no-repeat 0 0;}
div#feature_image ul.image_selector li a:hover {background-position: -9px 0px}
div#feature_image div#endangered {position: absolute; top: -11px; right: -11px; width: 97px; height: 94px; background: url("/images/endangered.png");}

/* Image area */
div#feature div.middle div.content {position: relative;}
div#feature div.middle div.content {margin: 0 8px 0 8px; background: #FFFFFF;}
div#feature_title {position: absolute; bottom: -30px; left: -15px; z-index: 5;}
div#feature_title p#country span{padding: 8px 20px 0px 20px ; color: #FFFFFF; background-color: #000000; font: normal 15px "PT Sans";}
div#feature_title p#country span img {margin: 0 8px 0 0;}
div#feature_title h1 {margin:5px 0 5px 0;}
div#feature_title h1 span {color: #FFFFFF;  font: normal 35px "PT Sans Bold"; padding: 5px 20px 3px 20px; background-color: #000000;}
div#feature_title p.distance span {padding: 7px 20px 10px 40px; color: #999999; background: url("/images/transport_icons.png") no-repeat 20px 7px; background-color: #000000; font: normal 13px Arial;}
div#feature_title p.distance span#plane {background-position: 20px 7px;}
div#feature_title p.distance span#car {background-position: 20px -24px;}
div#feature_title p.distance span#walking {background-position: 20px -60px;}

div#main_area { float: left; width: 535px; padding: 60px 25px 0 25px; color: #333333; background-color: #FFFFFF; font: 15px normal "LiberationSerifRegular";}
div#main_area h3 {margin-top: 25px; margin-bottom: 10px; color: #333333; font: normal 23px "PT Sans Bold";}
div#main_area div#wikipedia {position: absolute; bottom: 0; width: 535px; margin: 20px 0 0 0;  padding: 20px 0 20px 0; border-top: 1px solid #CCCCCC; color: #999999; background: url("/images/wikipedia.png") no-repeat right bottom;}
div#main_area div#wikipedia a {color: #999999; }

div#data_column {float: right; width: 245px; padding: 25px; background-color: #EDEDED;}
div#data_column div.map_container {position: absolute; padding: 5px; top: -25px; width: 245px; height:162px; background-color: #F9F9F9; z-index: 15;}
div#data_column div.map_container div#map { width: 245px; height:162px; background-color: #F9F9F9; z-index: 15;}
div#data_column p.label {font: normal 13px "PT Sans Bold"; color: #333333;}
div#data_column p.label#first {margin: 130px 0 0 0;}
div#data_column p.value {margin: 3px 0 0 0; font: normal 15px "LiberationSerifRegular"; color: #666666;}
div#data_column span.line {margin: 10px 0 10px 0; bordertop: 1px solid #333333;}
div#data_column ul {margin: 3px 0 0 18px; list-style-type: disc;}
div#data_column ul li {margin: 0 0 5px 0;font: normal 15px "LiberationSerifRegular"; color: #666666;}
div#data_column ul li a {font: normal 15px "LiberationSerifRegular"; text-decoration: underline; color: #FF6600;}
div#clear {clear: both;}

/* Mosaico */
div#feature_mosaic {position: relative;}
div#feature_mosaic div#big_image { width: 880px; height: 430px; }
div#feature_mosaic div#big_image p {display: none;}
div#feature_mosaic div.middle div.content {margin: 0 8px 0 8px; background: #FFFFFF;}
div#feature_mosaic div.middle div.content ul#image_list {height: 214px;}

/* Teleport */
div.content_box#teleport div.middle div.content{padding: 25px; background-color: white; font: normal 17px "PT Sans";}
a.teleport {position: absolute; top: 13px; right: 13px; margin: 0px 0px 0px 0; padding: 10px 0 0 0; width: 195px; height: 44px; text-align: center; font: bold 17px "PT Sans"; text-decoration: none; color: #333333;}
a.teleport#orange {background: transparent url("/images/teleport_orange.png") no-repeat;}
/* ... */

